# aria

./: .env.docker.example  .gitignore  ARIA-Documentation.md  DESIGN.md  PRODUCT.md  README.md  SELF-HOSTING.md  docker-compose.yml  run_tests.ps1
dashboard/: index.html
landing/: index.html  preview-landing.html
sdk/: CHANGELOG.md  README-python.md  aria_sdk.py  package.json  pyproject.toml  test_sdk.py
sdk/src/: index.ts  langchain.ts
server/: .env.example  Dockerfile  docker-migrate.ts  migrate-013.ts  migrate-014.ts  migrate-016.ts  migrate-018.ts  migrate-019.ts  migrate-022.ts  migrate-023.ts  migrate-024.ts  migrate-025.ts  migrate-all.ts  package-lock.json  package.json
server/scripts/: set-user-plan.ts
server/src/: index.ts  membrane.ts
server/src/config/: limits.ts  plans.ts  public-routes.ts
server/src/db/: pool.ts
server/src/db/migrations/: 013_gate.sql  014_spectrum.sql  016_temporal.sql  (+7 more)
server/src/middleware/: auth.ts  plans.ts
server/src/public/: acceptable-use.html  cookies.html  docs.html  index.html  pricing.html  privacy.html  proof.html  reset-password.html  terms.html
server/src/routes/: admin.ts  agents.ts  auth.ts  billing.ts  events.ts  gate.ts  proof.ts  temporal.ts  witness.ts  zeroproof.ts
server/src/services/: anomaly-detector.ts  email.ts  pattern-detector.ts  reputation.ts  shadow-witness.ts  temporal-anchor.ts  webhook.ts  zeroproof.ts
server/src/tests/: api.test.ts  integration.test.ts  membrane.test.ts  merkle.test.ts  scoring.test.ts
server/src/utils/: merkle.ts  network.ts  redis.ts
simulator/: agent.mjs
(+1 files in other folders)
